--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -17,7 +17,7 @@ jobs:
       run: |
         git remote add upstream https://github.com/${{ github.repository }}.git
         git fetch upstream ${{ github.base_ref }}
-        git pull --no-commit upstream ${{ github.base_ref }} || git merge --abort
+        git pull --no-rebase --no-commit upstream ${{ github.base_ref }} || git merge --abort
       shell: bash
     - name: check action properties
       # should show the files from main branch and incoming PR branch
